--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -1,6 +1,7 @@
+@import "nib"
+@import "fonts.styl"
 @import "normalize.styl"
-@import "fonts.styl" 
-@import "owl.theme.styl"
+
 @keyframes fadein
 	from
 		opacity 0
@@ -16,7 +17,7 @@ facebook = #3b5998
 twitter = #55acee
 pinterest = #cb2027
 linkedin = #007bb6
-rss = 	#FF6600
+rss = #FF6600
 body
 	font-size 16px
 	font-family 'Open Sans', sans-serif
@@ -52,15 +53,16 @@ figcaption
 	font-style italic		
 /*Clases de ayuda*/
 .btn
-	background lightgray
+	background gris_claro
 	color black
 	display inline-block
-	padding .6rem .8rem
+	padding .18rem .4rem
+	border 0	
 	text-align center
-	box-shadow 0 1px 2px negro
 	&:hover
-		background #e76000
-.btn-principal
+		//box-shadow 0 1px 2px negro
+		background 
+.btn-basic
 	background naranja
 	color white
 	&:hover
@@ -156,13 +158,15 @@ figcaption
 .logo-image
 	height 4.5rem
 	width auto
+.mayus
+	text-transform uppercase	
 .menu
 	font-size 1rem
 	list-style none
 	margin 0
 	overflow hidden
 	padding 0
-.menu-op
+.menu-item
 	margin 0
 	a
 		background negro
@@ -171,9 +175,15 @@ figcaption
 		font-size 1rem
 		padding .7rem
 		text-align left
+	&.inicio
+		a
+			&:before
+				content '\e602'
+				font-family 'icomoon'
 	&:nth-child(even)
 		a
 			background gris_oscuro
+
 .menu-principal
 	background black
 	clear both
@@ -222,7 +232,6 @@ figcaption
 				color naranja
 	&:nth-child(even)
 		margin-right 0	
-
 .post-meta
 		overflow hidden
 		border-bottom 3px solid gris_claro
@@ -257,6 +266,13 @@ figcaption
 	display none
 	vertical-align top
 	width 30%
+	>ul
+		list-style none
+		margin 0
+		padding 0
+		font-size 1rem
+		
+	
 .social-item
 	display inline-block
 	a
@@ -326,6 +342,24 @@ figcaption
 		left 0
 		width 100%
 		height 100%
+//Widgets style
+.widget
+	width 100%
+	margin-bottom 1.7rem
+	display block
+	table
+		width 100%
+.widget-last-post
+	margin-bottom 1.5rem;
+	h3
+		font-weight normal
+		margin 0
+		padding 0
+		a
+			color negro
+		&:hover
+			a
+				color naranja	
 
 /*Identificadores*/
 #container-post-home
@@ -342,7 +376,6 @@ figcaption
 			animation-name fadein
 			display inline
 #owl-slider
-	background negro
 	overflow hidden
 	position relative
 	width auto
@@ -351,9 +384,10 @@ figcaption
 		font-size 1rem
 		height 350px
 		overflow hidden
+		margin 0
 		img
 			bottom 0
-			height auto
+			height 100%
 			width 100%
 		h2
 			background-color rgba(negro, .75)
@@ -364,18 +398,20 @@ figcaption
 			position absolute
 			text-align left
 			top 60%
+		
+				
 #sidebar-baner
 	display none
+	height 350px	
 	overflow hidden
 	text-align left
+	vertical-align top
 	width 32.5%		
-	height 350px	
 #destacados-wraper
 	font-size 0
 	overflow hidden
 	width 100%	
 	margin-bottom 2rem
-	
 	
 .post-destacado
 	width 100%	
@@ -421,8 +457,13 @@ figcaption
 			top 0
 			width 100%
 			z-index 2002
-	.menu-op
+	.menu-item
 		display inline-block
+		&.inicio
+			a
+				&:before
+					content "\e602"
+					font-family 'icomoon'
 		&:nth-child(even)
 			a
 				background transparent
@@ -430,9 +471,10 @@ figcaption
 			background transparent
 			&:hover
 				background naranja
-		&.here
+		&.current-menu-item
 			a
 				background naranja
+	
 	.page-post
 		width 67%
 		margin-right 3%	 
