--- a/css/main.css
+++ b/css/main.css
@@ -633,6 +633,10 @@ figcaption {
 .info-post a {
   color: #b4b5b7;
 }
+.img-thumb {
+  overflow: hidden;
+  background: #f00;
+}
 .logo h1 {
   margin: 0;
   padding: 0;
@@ -711,6 +715,10 @@ figcaption {
 .post_home figure,
 .post-suggest figure {
   margin: 0;
+  width: auto;
+  max-height: 160px;
+  overflow: hidden;
+  background: #b4b5b7;
 }
 .post_home figure img,
 .post-suggest figure img {
@@ -865,17 +873,22 @@ figcaption {
 .widget table {
   width: 100%;
 }
+.widget-more-popular,
 .widget-last-post {
   margin-bottom: 1.5rem;
+  overflow: hidden;
 }
+.widget-more-popular h3,
 .widget-last-post h3 {
   font-weight: normal;
   margin: 0;
   padding: 0;
 }
+.widget-more-popular h3 a,
 .widget-last-post h3 a {
   color: #000;
 }
+.widget-more-popular h3:hover a,
 .widget-last-post h3:hover a {
   color: #c32700;
 }
@@ -937,6 +950,40 @@ figcaption {
   text-align: left;
   vertical-align: top;
   width: 32.5%;
+  font-size: 0.75rem;
+}
+#sidebar-baner div {
+  background: #000;
+  width: 100%;
+  height: 170px;
+  display: block;
+  margin: 0;
+  margin-bottom: 4%;
+  position: relative;
+}
+#sidebar-baner div img {
+  height: auto;
+  width: 100%;
+}
+#sidebar-baner div h3 {
+  background: rgba(0,0,0,0.5);
+  bottom: 0;
+  color: #fff;
+  font-size: 1.1rem;
+  font-weight: normal;
+  left: 0;
+  margin: 0;
+  padding: 0.35rem;
+  position: absolute;
+}
+#sidebar-baner div h3 a {
+  color: #fff;
+}
+#sidebar-baner div h3 a:hover {
+  color: #fff;
+}
+#sidebar-baner div:last-child {
+  bottom: 0;
 }
 #destacados-wraper {
   font-size: 0;
