scroll infinito arreglaro

--- a/css/main.css
+++ b/css/main.css
@@ -893,6 +893,13 @@ figcaption {
   color: #c32700;
 }
 /*Identificadores*/
+a#inifiniteLoader {
+  position: fixed;
+}
+bottom 15px,
+display none,
+right 10px,
+z-index 2,
 #container-post-home {
   font-size: 0;
 }
