--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -371,6 +371,13 @@ figcaption
 				color naranja	
 
 /*Identificadores*/
+a#inifiniteLoader
+	position fixed  
+    bottom 15px   
+    display none
+    right 10px 
+    z-index 2  
+    
 #container-post-home
 	font-size 0
 /*OWL SLIDER*/
