--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -371,12 +371,9 @@ figcaption
 				color naranja	
 
 /*Identificadores*/
-a#inifiniteLoader
-	position fixed  
-    bottom 15px   
-    display none
-    right 10px 
-    z-index 2  
+#inifiniteLoader
+	display none
+    
     
 #container-post-home
 	font-size 0
