--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -137,7 +137,7 @@ figcaption
 	background-color gris_oscuro
 	color white
 	font-size .8rem
-	padding 1rem 0
+	padding 1rem 0 3.8rem 0
 .input-search
 	font-family 'icomoon'
 	padding .3rem .2rem
@@ -197,7 +197,18 @@ figcaption
 	text-transform uppercase
 	top 3.5rem
 	width 90%
-
+.menu-footer
+	&.menu
+		margin-bottom 1rem
+		.menu-item
+			text-transform uppercase
+			background none
+			a
+				font-size .8rem
+				background none
+				color naranja
+				&:hover
+					text-decoration underline
 .nav-principal
 	margin 3rem 0
 			
@@ -257,6 +268,32 @@ figcaption
 	overflow hidden
 	right 0
 	bottom -2.8rem
+
+.semi-circle
+	background rgba(naranja, .50)
+	border-radius 100px 100px 0 0
+	display none
+	height 40px 
+	position fixed
+	width 80px
+	z-index 1900
+	bottom 0
+	left: 50%;
+	margin-left: -40px;
+	.go-to-sky
+		color white
+		display block
+		font-size 1.2rem
+		height 40px
+		line-height 2.5
+		text-align center
+		width 80px
+		right 0
+	    
+	&:hover
+		background rgba(naranja, 1)
+		
+
 .conito
 	position absolute
 	border 5px solid negro
