--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -250,6 +250,9 @@ figcaption
 				color naranja
 	&:nth-child(even)
 		margin-right 0	
+.post_home		
+	width 100%
+	
 .post-meta
 		overflow hidden
 		border-bottom 3px solid gris_claro
