--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -182,6 +182,7 @@ figcaption
 			&:before
 				content '\e602'
 				font-family 'icomoon'
+			
 	&:nth-child(even)
 		a
 			background gris_oscuro
@@ -421,7 +422,9 @@ figcaption
 /*OWL SLIDER*/
 #content-owl
 	position relative
-	width 100%
+	//width 100%
+	width 66.25%
+	margin-right 1.25%
 	height auto
 	display inline-block
 	&:hover
@@ -455,7 +458,8 @@ figcaption
 		
 				
 #sidebar-baner
-	display none
+	//display none
+	display inline-block
 	height 350px	
 	overflow hidden
 	text-align left
@@ -604,8 +608,8 @@ figcaption
 		h2
 			font-size 1.250rem
 			font-weight 900
-	#content-owl
+	/*#content-owl
 		width 66.25%
-		margin-right 1.25%
-	#sidebar-baner
-		display inline-block	
+		margin-right 1.25% */
+	//#sidebar-baner
+	//	display inline-block	
