--- a/css/main.css
+++ b/css/main.css
@@ -793,9 +793,10 @@ figcaption {
   font-size: 1.2rem;
   height: 40px;
   line-height: 2.5;
+  right: 0;
   text-align: center;
   width: 80px;
-  right: 0;
+  z-index: 9999;
 }
 .semi-circle:hover {
   background: #c32700;
